fixed row gaps for adaptive

--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -1,11 +1,11 @@
 .main {
   display: grid;
-  grid-template-rows: repeat(4, fill);
   row-gap: 100px;
   padding: 100px 20px;
 
   @include onTablet {
     padding: 140px 72px;
+    row-gap: 140px;
   }
 
   @include onDesktop {
